--- a/rebar.config
+++ b/rebar.config
@@ -1,13 +1,10 @@
-{erl_opts, [
-    warnings_as_errors
-]}.
+{erl_opts, [warnings_as_errors]}.
+{eunit_opts, [verbose]}.
 
 {profiles, [
-    {test, [
-        {deps, [
-            {meck, "0.8.9"}
-        ]}
+  {test, [
+    {deps, [
+      {meck, "0.8.9"}
     ]}
+  ]}
 ]}.
-
-{eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "_build/test"}]}}]}.
